--- a/the-basics.qmd
+++ b/the-basics.qmd
@@ -1,5 +1,6 @@
 # Basics {#sec-basics}
 
-:::{.callout-important appearance=simple}
+This sections
+::: {.callout-important appearance="simple"}
 Section will be written after whole content of this part is finished
 :::
