--- a/data-types.qmd
+++ b/data-types.qmd
@@ -5,30 +5,34 @@ This section is still under development
 :::
 
 
-Before performing any analysis, it's crucial to understand the types of data you are working with. Like data scientist or analysts, researchers must work with various data forms--whether they are survey response, secondary data, field data, or lab data. In the research process, as seen in @fig-str, data collection and analysis are key stages. Each data has its own unique structure and requirements influencing the method you'll use for their analysis. Understanding the distinctions between different data types ensures you can clean, manipulate, and interpret your dataset effectively. In this section, we’ll explore the foundational data types in R programming.
+Before performing any analysis, it's crucial to understand the types of data you are working with. Like data scientist, researchers work with various data forms--whether they are survey response, secondary data, data from the lab or field. In the research process, as seen in @fig-str, data collection and analysis are key stages. 
 
-![Stahes of Research](images/research-stages.png) {#fig-str}
+Each data has its own unique structure and requirements influencing the method you'll use for their analysis. Understanding the distinctions between different data types ensures you can clean, manipulate, and interpret your dataset effectively. In this section, we’ll explore the units of data you will be working which are regarded to as the atomic vectors. We will discuss a bit more vectors in @sec-data-structures.
+
+![Stages of Research](images/research-stages.png){#fig-str}
 
 
-There are five different data types in R programming, four which we will be using in this book. In R programming we use the function `typeof` and `class()` to check the type of data a variable is having. The data types are in R programming are:
+There are about seven different data types in R, five which we will be using more in this book. In R programming we use the functions `typeof` and `class()` to check the type of data a variable is having. The data types are in R programming are:
 
 *   character
+*   factor
 *   double
 *   integer
 *   complex
 *   logical
+*   date/POSIXt
 
 ## Character
-In R programming, characters are things enclosed in quotation mark. This quotation mark can either be the single  `'` or double `"`, they are treated the same way in R programming. It is more common to use the `"` than the single. Characters while often thought of as alphabets can also be numbers as long as they are enclosed in quotation marks. For example, *"man"* is a character:
+Characters are text and in R they include anything enclosed in quotation marks. This quotation mark can either be the single  `'` or double `"`, they are treated the same way in R. It is more common to use the double, `"`, than the single, `'`. Characters while often thought of as alphabets can also be numbers as long as they are enclosed in quotation marks. For example:
 
 ```{r}
-"man"
+"tree"
 ```
 
 We can check what data type *"man"* is this with `class()` or `typeof()` function.
 ```{r}
-typeof("man")
-class("man")
+typeof("tree")
+class("tree")
 ```
 
 For now we will stick to using  `class()` function. What about if we have a number enclosed in quotation marks?
@@ -39,27 +43,26 @@ class("2")
 
 This proves that anything enclosed in quotation marks are characters.
 ```{r}
-typeof("+")
+class("+")
 ```
 
-This is also true if values are assigned to a variable. The content of the variable will be evaluated and not the variable in its self. To put in simple terms, a bottle in itself is not evaluated but the content of the bottle, be it water, wine, or soft drink.
+This is also true if values are assigned to a variable. The content of the variable will be evaluated and not the variable in its self. To put in simple terms, the variables are references for the values.
 ```{r}
-man <- "olamide"
-class(man)
+name_of_tree <- "Quercus robur"
+class(name_of_tree)
 ```
 
-Let's look at the example below, we have error because `olamide` is an object with no values assigned to it. So `olamide` and "olamide" are different. The latter is a character while the formal is an object.
+Let's look at the example below, we have error because `oak` is an object with no values assigned to it. So `olamide` and "olamide" are different. The latter is a character while the former is an object.
 ```{r}
-#| eval: false
+#| error: true
 
-class(olamide)
+class(oak)
 ```
-`Error: object 'olamide' not found`.
 
 There is a way to confirm if objects are characters, using `is.character()` function. The result of the function is either TRUE or FALSE.
 
 ```{r}
-is.character("olamide")
+is.character("moabi")
 ```
 
 ```{r}
